examples/codegen/effects/generators_complex.an
effect Emit a with
    emit: fn a -> Unit

iota (n: U32) = loop (i = 0) ->
    if i < n then
        emit i
        recur (i + 1)

filter (stream: fn Unit -> Unit can Emit a) (f: fn a -> Bool pure) =
    handle stream ()
    | emit x ->
        if f x then
            emit x
        resume ()

map (stream: fn Unit -> Unit can Emit a) (f: fn a -> b pure): Unit can Emit b =
    handle stream ()
    | emit x ->
        emit (f x)
        resume ()

enumerate (stream: fn Unit -> Unit can Emit a): Unit can Emit (U32, a) =
    var i = 0u32
    handle stream ()
    | emit x ->
        emit (i, x)
        i += 1
        resume ()

for_ (stream: fn Unit -> Unit can Emit a) (f: fn a -> Unit pure) =
    handle stream ()
    | emit x ->
        f x
        resume ()

my_print (x1: (U32, U32)) =
    x = first x1
    y = second x1
    print "${x}, ${y}"

main () =
    iota 10
        ~> filter (_ %% 2)
        ~> map (_ * 2)
        ~> enumerate
        ~> for_ my_print

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/effects/generators_complex.an:6:9
// 5 |     if i < n then
// 6 |         emit i	// error: `emit` not found in scope
//   |         ^^^^
// 7 |         recur (i + 1)
// 
// examples/codegen/effects/generators_complex.an:9:17
//    | // error: Emit is not a type
//  9 | filter (stream: fn Unit -> Unit can Emit a) (f: fn a -> Bool pure) =
//    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
// 10 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:9:17
//    | // error: Expected 0 arguments but found 1
//  9 | filter (stream: fn Unit -> Unit can Emit a) (f: fn a -> Bool pure) =
//    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
// 10 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:9:17
//    | // error: Expected a type constructor of kind effect, but found one of kind *
//  9 | filter (stream: fn Unit -> Unit can Emit a) (f: fn a -> Bool pure) =
//    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
// 10 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:10:5
//  9 | filter (stream: fn Unit -> Unit can Emit a) (f: fn a -> Bool pure) =
// 10 |     handle stream ()	// error: Effects and handle expressions are currently unimplemented
//    |     ^^^^^^^^^^^^^^^^
// 11 |     | emit x ->
// 
// examples/codegen/effects/generators_complex.an:16:1
//    | // error: Emit is not a type
// 16 | map (stream: fn Unit -> Unit can Emit a) (f: fn a -> b pure): Unit can Emit b =
//    | ^^^
// 17 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:16:1
//    | // error: Expected 0 arguments but found 1
// 16 | map (stream: fn Unit -> Unit can Emit a) (f: fn a -> b pure): Unit can Emit b =
//    | ^^^
// 17 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:16:1
//    | // error: Expected a type constructor of kind effect, but found one of kind *
// 16 | map (stream: fn Unit -> Unit can Emit a) (f: fn a -> b pure): Unit can Emit b =
//    | ^^^
// 17 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:16:14
//    | // error: Emit is not a type
// 16 | map (stream: fn Unit -> Unit can Emit a) (f: fn a -> b pure): Unit can Emit b =
//    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^
// 17 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:16:14
//    | // error: Expected 0 arguments but found 1
// 16 | map (stream: fn Unit -> Unit can Emit a) (f: fn a -> b pure): Unit can Emit b =
//    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^
// 17 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:16:14
//    | // error: Expected a type constructor of kind effect, but found one of kind *
// 16 | map (stream: fn Unit -> Unit can Emit a) (f: fn a -> b pure): Unit can Emit b =
//    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^
// 17 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:17:5
// 16 | map (stream: fn Unit -> Unit can Emit a) (f: fn a -> b pure): Unit can Emit b =
// 17 |     handle stream ()	// error: Effects and handle expressions are currently unimplemented
//    |     ^^^^^^^^^^^^^^^^
// 18 |     | emit x ->
// 
// examples/codegen/effects/generators_complex.an:22:1
//    | // error: Emit is not a type
// 22 | enumerate (stream: fn Unit -> Unit can Emit a): Unit can Emit (U32, a) =
//    | ^^^^^^^^^
// 23 |     var i = 0u32
// 
// examples/codegen/effects/generators_complex.an:22:1
//    | // error: Expected 0 arguments but found 1
// 22 | enumerate (stream: fn Unit -> Unit can Emit a): Unit can Emit (U32, a) =
//    | ^^^^^^^^^
// 23 |     var i = 0u32
// 
// examples/codegen/effects/generators_complex.an:22:1
//    | // error: Expected a type constructor of kind effect, but found one of kind *
// 22 | enumerate (stream: fn Unit -> Unit can Emit a): Unit can Emit (U32, a) =
//    | ^^^^^^^^^
// 23 |     var i = 0u32
// 
// examples/codegen/effects/generators_complex.an:22:20
//    | // error: Emit is not a type
// 22 | enumerate (stream: fn Unit -> Unit can Emit a): Unit can Emit (U32, a) =
//    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
// 23 |     var i = 0u32
// 
// examples/codegen/effects/generators_complex.an:22:20
//    | // error: Expected 0 arguments but found 1
// 22 | enumerate (stream: fn Unit -> Unit can Emit a): Unit can Emit (U32, a) =
//    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
// 23 |     var i = 0u32
// 
// examples/codegen/effects/generators_complex.an:22:20
//    | // error: Expected a type constructor of kind effect, but found one of kind *
// 22 | enumerate (stream: fn Unit -> Unit can Emit a): Unit can Emit (U32, a) =
//    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
// 23 |     var i = 0u32
// 
// examples/codegen/effects/generators_complex.an:24:5
// 23 |     var i = 0u32
// 24 |     handle stream ()	// error: Effects and handle expressions are currently unimplemented
//    |     ^^^^^^^^^^^^^^^^
// 25 |     | emit x ->
// 
// examples/codegen/effects/generators_complex.an:30:15
//    | // error: Emit is not a type
// 30 | for_ (stream: fn Unit -> Unit can Emit a) (f: fn a -> Unit pure) =
//    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^
// 31 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:30:15
//    | // error: Expected 0 arguments but found 1
// 30 | for_ (stream: fn Unit -> Unit can Emit a) (f: fn a -> Unit pure) =
//    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^
// 31 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:30:15
//    | // error: Expected a type constructor of kind effect, but found one of kind *
// 30 | for_ (stream: fn Unit -> Unit can Emit a) (f: fn a -> Unit pure) =
//    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^
// 31 |     handle stream ()
// 
// examples/codegen/effects/generators_complex.an:31:5
// 30 | for_ (stream: fn Unit -> Unit can Emit a) (f: fn a -> Unit pure) =
// 31 |     handle stream ()	// error: Effects and handle expressions are currently unimplemented
//    |     ^^^^^^^^^^^^^^^^
// 32 |     | emit x ->
// 
// examples/codegen/effects/generators_complex.an:39:12
// 38 |     y = second x1
// 39 |     print "${x}, ${y}"	// error: Expected the end of this block but found `${`
//    |            ^^
// 
// examples/codegen/effects/generators_complex.an:42:5
// 41 | main () =
//    |     // error: Expected fn _ [_] -> fn Unit -> Unit can (error) can (error) but found fn U32 -> Unit pure
// 42 |     iota 10
//    |     ^^^^
// 43 |         ~> filter (_ %% 2)
// 
// examples/codegen/effects/generators_complex.an:43:22
// 42 |     iota 10
//    |         // error: Multiple matching implicits found for type Cast U8 _ required by parameter 5 of %%: cast_u8_char, cast_u8_f32, cast_u8_f64, cast_u8_u16, cast_u8_u32, ..
// 43 |         ~> filter (_ %% 2)
//    |                      ^^
// 44 |         ~> map (_ * 2)
// 
// examples/codegen/effects/generators_complex.an:45:12
// 44 |         ~> map (_ * 2)
//    |         // error: Expected fn _ [_] -> fn Unit -> Unit can (error) pure but found fn (fn Unit -> Unit can (error)) -> Unit can (error)
// 45 |         ~> enumerate
//    |            ^^^^^^^^^
// 46 |         ~> for_ my_print
// 
// Found 27 errors and 0 warnings

